Fix spacing

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -269,6 +269,7 @@ $pdf-table-border-color: darken(#f9f9f9, 3%);
 .l-print__summary-items {
   display: flex;
   padding: 0;
+  margin-top: 0;
   list-style-type: none;
   li {
     margin-right: 50px;
